force-app/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <description>LEM-81 :This event is used to send logging messages as part of the logging framework</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>