force-app/main/default/objects/Log_Event__e/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <description>LEM-81: This field is used to store Id of the batch job which created the log.</description>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>