force-app/main/default/objects/Log_Event__e/fields/Detailed_Message__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Message__c</fullName>
    <description>LEM-81: This field is used to store detailed log message occurred.</description>
    <label>Detailed Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>