force-app/main/default/objects/Log_Event__e/fields/Failed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Count__c</fullName>
    <description>LEM-81:Count of the failed records</description>
    <label>Failed Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>