force-app/main/default/objects/Log_Event__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>LEM-81:This field is used to store the execution event of the error</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>