force-app/main/default/objects/Log_Event__e/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>LEM-81: This field is used to store the universally unique Request Id of the current Apex execution.</description>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>