force-app/main/default/objects/Log_Event__e/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <description>LEM-81:Defines the severity of the error that is being logged</description>
    <label>Severity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>