force-app/main/default/objects/Log_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-81: This field is used to store status of callout/batch job</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>